rust/test/dt/type_constructor/many/many_from_tuple_test.stderr
error[E0277]: `({integer}, {integer})` is not an iterator
 --> ../../../rust/test/dt/type_constructor/many/many_from_tuple_test.rs:6:14
  |
6 |   Bad::from( ( 1, 2 ) );
  |   ---------  ^^^^^^^^ `({integer}, {integer})` is not an iterator
  |   |
  |   required by a bound introduced by this call
  |
  = help: the trait `Iterator` is not implemented for `({integer}, {integer})`
  = help: the trait `From<Collection>` is implemented for `Bad<T>`
  = note: required for `({integer}, {integer})` to implement `IntoIterator`
note: required for `Bad<_>` to implement `From<({integer}, {integer})>`
 --> ../../../rust/test/dt/type_constructor/many/many_from_tuple_test.rs:5:3
  |
5 |   types!( many Bad : < T > );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::_many` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)
